Реализация контроллеров, создание представление

--- a/SimpleApplication/appsettings.json
+++ b/SimpleApplication/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=TestDatabase;Username=postgres;Password=Pop913764"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
